# HTMLView

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  relative_test.html  test.html
.github/workflows/: ci.yml  release.yml
html_view/: Cargo.toml  LICENSE  README.md  build.rs
html_view/benches/: viewer_benchmarks.rs
html_view/examples/: advanced.rs  all_options.rs  app_directory.rs  base_dir.rs  builder_test.rs  custom_toolbar.rs  dialogs.rs  error_handling.rs  local_file.rs  refresh_demo.rs  remote_url.rs  simple.rs  timeout.rs  transparent.rs
html_view/src/: error.rs  launcher.rs  lib.rs  locator.rs  options.rs  result.rs
html_view/tests/: builder_tests.rs  bundled_binary.rs  error_handling.rs  launcher_tests.rs  locator_integration.rs  version_compatibility.rs  viewer_lifecycle.rs
html_view_app/: Cargo.toml  index.html  tauri.conf.json
html_view_app/capabilities/: default.json
html_view_app/src/: app.rs  content_loader.rs  main.rs
html_view_cli/: Cargo.toml  README.md
html_view_cli/src/: main.rs
html_view_shared/: Cargo.toml  README.md
html_view_shared/src/: lib.rs
html_view_shared/tests/: serialization.rs
