[workspace]
members = [
    "html_view",
    "html_view_shared",
    "html_view_app",
    "html_view_cli",
]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Jack Geraghty (jmg049) <jgeraghty049@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
tauri = "2.10.2"
clap = { version = "4.5.59", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
debug = false
strip = true
