[package]
name = "html_view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
html_view_shared = { git = "https://github.com/jmg049/HTMLView.git" }
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.5"
