[package]
name = "html_view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Rust library for rendering HTML content in a native tauri application."
documentation = "https://github.com/jmg049/HTMLView"
repository = "https://github.com/jmg049/HTMLView"
keywords = ["html", "tauri", "gui", "rendering"]
categories = ["gui"]

[dependencies]
html_view_shared = { version = "0.2.0", path = "../html_view_shared" }
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.5"
criterion = "0.8.1"

[[bench]]
name = "viewer_benchmarks"
harness = false

[features]
default = []
bundled = ["ureq"]  # Optional: automatically download pre-built binary

[build-dependencies]
ureq = { version = "2.9", optional = true, features = ["tls"], default-features = false }
