[package]
name = "html_view_app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

description = "A Tauri-based desktop application for rendering HTML content."

[dependencies]
html_view_shared = { version = "0.2.0", path = "../html_view_shared" }
tauri.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
url.workspace = true
base64 = "0.22"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-cli = "2.4.1"
gtk = "0.18"
notify = "8.2.0"

[build-dependencies]
tauri-build = "2.0"

[profile.release]
opt-level = "z"       # Optimize for size (overrides workspace opt-level = 3)
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"     # Strip all symbols for minimal binary size
