[package]
name = "html_view_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "html_view_cli"
path = "src/main.rs"

[dependencies]
html_view = { path = "../html_view" }
clap.workspace = true
anyhow.workspace = true
url.workspace = true
