[package]
name = "html_view_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "html_view_cli"
path = "src/main.rs"

[dependencies]
html_view = { git = "https://github.com/jmg049/HTMLView.git" }
clap.workspace = true
anyhow.workspace = true
url.workspace = true
