[package]
name = "html_view_shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared utilities and types for the HTMLView Rust library."
documentation = "https://github.com/jmg049/HTMLView"
repository = "https://github.com/jmg049/HTMLView"
keywords = ["html", "tauri", "gui"]
categories = ["gui"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
url.workspace = true
